# haproxy-collector

./: .snapcraftignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  main.yaml
charm/: LICENSE  README.md  charmcraft.yaml  tox.ini
charm/src/: charm.py  config.py  file_manager.py  service_manager.py
charm/tests/integration/: test_charm.py
charm/tests/unit/: test_charm.py
snap/: snapcraft.yaml
snap/hooks/: configure
src/haproxy_collector/: __main__.py  database_manager.py  haproxy_api_client.py  haproxy_collector.py  haproxy_data_parser.py  haproxy_service.py
